koopas change direction when hitting the wall

--- a/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3.vcxproj
@@ -185,6 +185,7 @@
     <Image Include="mario.ico" />
     <Image Include="textures\bbox.png" />
     <Image Include="textures\enemies.png" />
+    <Image Include="textures\enemies_flipped.png" />
     <Image Include="textures\mario.png" />
     <Image Include="textures\mis0_transparent.png" />
     <Image Include="textures\misc.png" />
