--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -184,5 +184,8 @@
     <Image Include="textures\mis0_transparent.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="textures\enemies_flipped.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
