finish koopa, kick koopa shell, jump on koopa, goomba collision with koopa shell

--- a/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3.vcxproj
@@ -186,6 +186,7 @@
     <Image Include="textures\bbox.png" />
     <Image Include="textures\enemies.png" />
     <Image Include="textures\enemies_flipped.png" />
+    <Image Include="textures\enemies_rotated.png" />
     <Image Include="textures\mario.png" />
     <Image Include="textures\mis0_transparent.png" />
     <Image Include="textures\misc.png" />
