--- a/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3.vcxproj
@@ -136,7 +136,7 @@
     <ClInclude Include="Animations.h" />
     <ClInclude Include="AssetIDs.h" />
     <ClInclude Include="Brick.h" />
-    <ClInclude Include="Bush.h" />
+    <ClInclude Include="BackgroundObject.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="debug.h" />
@@ -161,7 +161,7 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Animations.cpp" />
     <ClCompile Include="Brick.cpp" />
-    <ClCompile Include="Bush.cpp" />
+    <ClCompile Include="BackgroundObject.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="debug.cpp" />
@@ -191,6 +191,8 @@
     <Image Include="textures\mis0_transparent.png" />
     <Image Include="textures\misc.png" />
     <Image Include="textures\misc0.png" />
+    <Image Include="textures\misc2.png" />
+    <Image Include="textures\misc2_nobg.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
