--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="PrizeBlock.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Prize.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -165,6 +168,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="PrizeBlock.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Prize.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
