--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="Prize.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Piranha.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -171,6 +174,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Prize.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Piranha.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
