add paragoomba with the same animation as goomba

--- a/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3.vcxproj
@@ -192,6 +192,8 @@
     <Image Include="textures\bbox.png" />
     <Image Include="textures\enemies.png" />
     <Image Include="textures\enemies_flipped.png" />
+    <Image Include="textures\enemies_recolored.png" />
+    <Image Include="textures\enemies_recolored_flipped.png" />
     <Image Include="textures\enemies_rotated.png" />
     <Image Include="textures\mario.png" />
     <Image Include="textures\mis0_transparent.png" />
