--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -214,5 +214,11 @@
     <Image Include="textures\misc2_nobg.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="textures\enemies_recolored.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="textures\enemies_recolored_flipped.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
