--- a/SuperMarioBros3.vcxproj
+++ b/SuperMarioBros3.vcxproj
@@ -190,6 +190,7 @@
   <ItemGroup>
     <Image Include="mario.ico" />
     <Image Include="textures\bbox.png" />
+    <Image Include="textures\enemies-4.png" />
     <Image Include="textures\enemies.png" />
     <Image Include="textures\enemies_flipped.png" />
     <Image Include="textures\enemies_recolored.png" />
