--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -217,10 +217,13 @@
     <Image Include="textures\enemies_recolored.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="textures\enemies_recolored_flipped.png">
+    <Image Include="textures\enemies_recolored_rotated.png">
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="textures\enemies-4.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="textures\enemies_recolored_flipped.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
