--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -226,5 +226,8 @@
     <Image Include="textures\enemies_recolored_flipped.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="textures\enemies2_nobg.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
