--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -229,5 +229,8 @@
     <Image Include="textures\enemies2_nobg.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="textures\mario2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
