--- a/SuperMarioBros3.vcxproj.filters
+++ b/SuperMarioBros3.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="Piranha.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="InvisibleObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -177,6 +180,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Piranha.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="InvisibleObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
